[package]
name = "programming-trends"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtrend = "0.1.6"
clap = { version = "4.1.1", features = ["derive"] }
reqwest = "0.11.14"
serde_json = "1.0.91"
plotly = "0.8.3"
